src/objects/GE_File_Config__c.object
<CustomObject>
    <description>Generic export file config which contains config details of each different file to export</description>
    <fields>
        <fullName>Blackpurl_Format_Order_Number__c</fullName>
        <description>Used for ordering of the blackpurl formats in dropdown</description>
        <inlineHelpText>Used for ordering of the blackpurl formats in dropdown</inlineHelpText>
        <label>Blackpurl Format Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blackpurl_Format__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the Export config defined is a pre defined blackpurl format</description>
        <inlineHelpText>True if the Export config defined is a pre defined blackpurl format</inlineHelpText>
        <label>Blackpurl Format?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delimiter__c</fullName>
        <description>Symbol of file separator used for separating different column values in file</description>
        <inlineHelpText>Symbol of file separator used for separating different column values in file</inlineHelpText>
        <label>Delimiter</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Content_Type__c</fullName>
        <description>Different file content types like (csv, txt)</description>
        <inlineHelpText>Different file content types like (csv, txt)</inlineHelpText>
        <label>File Content Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>csv</fullName>
                </value>
                <value>
                    <fullName>txt</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Name of the file to be exported</description>
        <inlineHelpText>Name of the file to be exported</inlineHelpText>
        <label>File Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Separator__c</fullName>
        <description>Text value of the file separator used for separating different column values in file</description>
        <inlineHelpText>Text value of the file separator used for separating different column values in file</inlineHelpText>
        <label>File Separator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>comma</fullName>
                </value>
                <value>
                    <fullName>pipe</fullName>
                </value>
                <value>
                    <fullName>semi-column</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>space</fullName>
                </value>
                <value>
                    <fullName>tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>Filter__c</referenceTo>
        <relationshipLabel>GE File Configs</relationshipLabel>
        <relationshipName>GE_File_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_By_Field_API_Name__c</fullName>
        <label>Group By Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Column_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to indicate if column header should to be included in file export or not. Default value is true.</description>
        <inlineHelpText>Flag to indicate if column header should to be included in file export or not. Default value is true.</inlineHelpText>
        <label>Include Column Header?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Images__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if images should to be included in file export or not</description>
        <inlineHelpText>Flag to indicate if images should to be included in file export or not</inlineHelpText>
        <label>Include Images?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Image_URLs_In_One_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Image URLs In One Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Timestamp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if timestamp should be included in file name or not. Default value is false</description>
        <inlineHelpText>Flag to indicate if timestamp should be included in file name or not. Default value is false</inlineHelpText>
        <label>Include Timestamp?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GE_File_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <description>API name of the object for which data is to be exported in file</description>
        <inlineHelpText>API name of the object for which data is to be exported in file</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_By_Clause__c</fullName>
        <description>SOQL formatted Order by clause, used for defining the sorting order of records in file</description>
        <inlineHelpText>SOQL formatted Order by clause, used for defining the sorting order of records in file</inlineHelpText>
        <label>Order By Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_In_Feed_URL__c</fullName>
        <label>Publish In Feed URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_to_FTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to define if exported file should be posted to FTP?</description>
        <inlineHelpText>Flag to define if exported file should be posted to FTP?</inlineHelpText>
        <label>Send to FTP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_public_image__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to define if the images included in exported file are public or private</description>
        <inlineHelpText>Flag to define if the images included in exported file are public or private</inlineHelpText>
        <label>Use public image?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GE File Configs</relationshipLabel>
        <relationshipName>GE_File_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Where_Clause__c</fullName>
        <description>SOQL Formatted Where clause to query based on the requirement of the file to be exported</description>
        <inlineHelpText>SOQL Formatted Where clause to query based on the requirement of the file to be exported</inlineHelpText>
        <label>Where Clause</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JobRequestId__c</fullName>
        <description>Response id from SOQL to File API</description>
        <inlineHelpText>Response id from SOQL to File API</inlineHelpText>
        <label>JobRequestId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>GE File Config</label>
    <nameField>
        <displayFormat>FC-{00000000}</displayFormat>
        <label>GE File Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GE File Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>